--- a/index.html
+++ b/index.html
@@ -4,17 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Blackjack</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Exo:300|Montserrat:600" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    <h1>Welcome to my Blackcock game bitches, please prepare ur assholes</h1>
-    <h4>by Babu Bh0sdiwala</h4>
-
-    <p id = "game Text">Hello how are u, are u ok? becaos u will lose </p>
-    <button id = "button1" >Start New Game</button>
-    <button id = "button2" >Hit!</button>
-    <button id = "button3" >Stay...</button>
-
+    <header class="startup text-white text-center d-flex ">
+        <div class="container my-auto">
+            <div class="row">
+                <div class="col-lg-12 my-auto">
+                    <h1 class="text-uppercase">
+                        <strong>Welcome to my Blackcock game bitches, please prepare ur assholes</strong>
+                    </h1>
+                    <h4>by Babu Bh0sdiwala</h4>
+                    <p id = "game-text">Hello how are u, are u ok? becaos u will lose </p>
+                    <hr>
+                </div>
+                <div class="col-lg-12 my-auto">
+                        <button class="btn btn-primary btn-xl" id = "button1" >
+                            Start New Game
+                        </button>
+                        <button class="btn btn-primary btn-xl" id = "button2" >
+                          Hit!
+                        </button>
+                        <button class="btn btn-primary btn-xl" id = "button3" >
+                            Stay...                    
+                        </button>
+                </div>
+            </div>
+        </div>
+    </header>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
